--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-secure-storage": "^1.0.21"
   },
   "scripts": {
     "start": "react-scripts start",
