Removed count from VideoGameContainer and imported React bootstrap

--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "game-tracker",
   "packageManager": "yarn@3.3.0",
   "dependencies": {
+    "bootstrap": "^5.2.3",
+    "classnames": "^2.3.2",
     "create-react-app": "^1.2.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
     "react-scripts": "^5.0.1",
