Added Navigation bar styling

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "create-react-app": "^1.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
     "react-scripts": "^5.0.1",
