--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
     "react-scripts": "^5.0.1",
-    "react-secure-storage": "^1.0.21"
+    "react-secure-storage": "^1.0.21",
+    "react-stars": "^2.2.5",
+    "recharts": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
