--- a/package.json
+++ b/package.json
@@ -37,5 +37,5 @@
   "devDependencies": {
     "reinstall-node-modules": "^2.0.0"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://127.0.0.1:5000"
 }
