--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start-server": "cd backend && python3 server.py",
+    "start-server": "cd backend && python3.9 -m venv venv39 && bash -c 'source venv39/bin/activate' && pip3 install -r requirements.txt && python3 server.py",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
