--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "game-tracker",
   "packageManager": "yarn@3.3.0",
   "dependencies": {
+    "axios": "^1.4.0",
     "bootstrap": "5.3.0-alpha1",
     "classnames": "^2.3.2",
     "create-react-app": "^1.2.1",
