--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "6",
     "react-scripts": "^5.0.1",
     "react-secure-storage": "^1.0.21",
     "react-stars": "^2.2.5",
-    "recharts": "^2.2.0"
+    "recharts": "^2.2.0",
+    "redux": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
