--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "game-tracker",
   "packageManager": "yarn@3.3.0",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
+    "@tanstack/react-query": "^5.62.0",
     "axios": "^1.7.7",
     "bootstrap": "5.3.0-alpha1",
     "classnames": "^2.3.2",
