--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-secure-storage": "^1.0.21",
     "react-stars": "^2.2.5",
     "recharts": "^2.2.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
