--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "6",
     "react-scripts": "^5.0.1",
