--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
     "@tanstack/react-query": "^5.62.0",
+    "@tanstack/react-query-devtools": "^5.64.2",
     "axios": "^1.7.7",
     "bootstrap": "5.3.0-alpha1",
     "classnames": "^2.3.2",
